# gideon-tax

./: .gitignore  Cargo.toml
crates/honest-tax-core/: Cargo.toml
crates/honest-tax-core/src/: error.rs  lib.rs  money.rs  types.rs  usd_amount.rs
crates/honest-tax-core/src/inputs/: mod.rs  w2.rs
crates/honest-tax-core/src/outputs/: form1040.rs  mod.rs
crates/honest-tax-core/src/rules/: loader.rs  mod.rs  y2025.rs
crates/honest-tax-core/src/traits/: input.rs  mod.rs  output.rs  rules.rs
crates/honest-tax-core/src/years/: mod.rs
data/2025/form_schemas/: form1040.json  w2.json
